	of messing with caller's.
	* modules.c (callback_proc): Ditto.
	* patch.c (patch_proc): Ditto; use a local argv array instead
	of messing with caller's.
	* rtag.c (rtag_proc): Ditto; use a local argv array instead
	of messing with caller's.
	* server.c (expand_proc): Ditto.
	* subr.c (line2argv): Change initial argv_allocated back to 1.

2000-06-13  Larry Jones  <larry.jones@sdrc.com>

	* add.c (add): Plug memory leaks.
	* admin.c (admin_fileproc): Ditto.
	* checkout.c (build_dirs_and_chdir): Ditto.
	* edit.c (editors_fileproc): Ditto.
	* log.c (cvslog, log_parse_revlist, log_parse_date): Ditto.
	* rcs.c (RCS_addaccess): Ditto.
	* tag.c (check_fileproc): Ditto.
	* vers_ts.c (Version_TS): Ditto.
	* watch.c (watchers_fileproc): Ditto.

2000-06-12  Larry Jones  <larry.jones@sdrc.com>

	* rcs.c (rcsbuf_valword): Set rcsbuf->vlen to keep rcsbuf_valcopy()
	from allocating more memory than needed for @ strings.  Don't declare
	unless PRESERVE_PERMISSIONS_SUPPORT (since not defined).

	* rcs.c (RCS_abandon): New function to abandon changes.
	* rcs.h: Declare it.
	* admin.c (admin_fileproc): Use it instead of RCS_reparsercsfile.

	* commit.c (commit_fileproc): Fix memory leaks.
	* patch.c (patch_fileproc): Ditto.
	* rcs.c (RCS_nodeisbranch, RCS_copydeltas): Ditto.
	* tag.c (tag_fileproc): Ditto.
	* update.c (update): Ditto.

2000-06-09  Larry Jones  <larry.jones@sdrc.com>

	* rcs.c (RCS_reparsercsfile, RCS_fully_parse, getdelta,
	RCS_getdeltatext): Handle newphrases with composite values.
	(rcsbuf_getkey): Don't remove @s in composite values -- it makes
	it impossible to parse the value!  Set special flag to indicate
	a composite value.
	(rcsbuf_valcopy, rcsbuf_valpolish_internal): Handle composite values.
	(putrcsfield): Write composite values.
	(RCS_checkin): Set node types in other_delta list.
	* hash.h: Add RCSCMPFLD.
	* hash.c (nodetypestring): Ditto.

	* rcs.c (getdelta): Never allocate space for value, just return