@@ -23,6 +23,8 @@
 	* server.c (expand_proc): Ditto.
 	* subr.c (line2argv): Change initial argv_allocated back to 1.
 
+	* checkout.c (findslash): Fix non-ANSI code.
+
 2000-06-13  Larry Jones  <larry.jones@sdrc.com>
 
 	* add.c (add): Plug memory leaks.
